--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,5 +70,5 @@
         "xtree": "cpp",
         "xutility": "cpp"
     },
-    "C_Cpp.errorSquiggles": "enabled"
+    "C_Cpp.errorSquiggles": "disabled"
 }
